@@ -110,6 +110,9 @@ bzr 0.8rc1  2006-04-14
     * Make 'pull' and 'push' remember location on failure using --remember.
       (Olaf Conradi)
 
+    * For compatability, make old format for weave repository inside metadir
+      available as 'metaweave' format.  (Olaf Conradi)
+
   INTERNALS:
   
     * The internal storage of history, and logical branch identity have now
